:bug: Minor fixes